# wanna-comment

server-src/: Cargo.toml
server-src/src/: app.rs  lib.rs  main.rs
server-src/src/entity/: comment.rs  mod.rs
server-src/src/mock/: mod.rs
server-src/src/redis/: mod.rs  re_comment.rs
server-src/src/routes/: comments.rs  mod.rs
tools/: docker-compose.yml  redis.conf
ui/: package.json  pnpm-lock.yaml  rollup.config.js
ui/api/: commentAPI.js
ui/public/: index.html
ui/src/: App.svelte  main.js
ui/src/components/: CommentCard.svelte  CommentInput.svelte
ui/src/stores/: comment.js
ui/src/utils/: request.js
ui/src/view/: Index.svelte
