[package]
name = "server-src"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
redis = "0.27.6"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4"] }
once_cell = "1.18.0"
rand = "0.8.5"
sqlite = "0.36.1"
